Fix cell width to stop it jumping around when selecting items

--- a/stats/static/css/stats.css
+++ b/stats/static/css/stats.css
@@ -12,8 +12,9 @@
     height: 58px;
 }
 
-.stats-table {
-    width: 50%;
+.stats-table .stats-field-heading{
+    width: 300px;
+    text-align: left;
 }
 
 
